--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -123,7 +123,7 @@
     }  
     
     .textos-1{
-        background-image: url(../../assets/images/unidade.jpeg);
+        background-image: url('../../assets/images/unidade.jpeg');
         background-size: 100%;
         height: 71vh;
         display: flex;
@@ -320,6 +320,7 @@
         background-image: url('../../assets/images/Home-1.png');
         width: 100vw;
         height: 99vh;
+        background-size: 100%;
     }
     
     .te-4{
@@ -419,8 +420,8 @@
     
     .co{
         background-color:  #C6781E;
-        height: 27vw;
-        width: 23vw;
+        height: 25rem;
+        width: 22rem;
         border-radius: 1rem;
         display: flex;
         flex-direction: column;
@@ -430,8 +431,8 @@
     
     .co:hover{
         background-color:  #C6781E;
-        height: 25.5rem;
-        width: 22rem;
+        height: 27.5rem;
+        width: 23rem;
         border-radius: 1rem;
         display: flex;
         flex-direction: column;
