--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -1,4 +1,6 @@
-.body{
+ 
+
+.bodyl{
     background-image: url('../../assets/images/login.jpg');
     background-size: 100%;
     height: 100vh;
@@ -34,12 +36,12 @@
 
 
     .faixa2{
-        display: flex;
-        flex-direction: column;
-        color: #fff;
-        justify-content: space-between;
-        height: 10rem;
-        width: 26rem;
+        display: flex !important;
+        flex-direction: column !important;
+        color: #fff !important;
+        justify-content: space-between !important;
+        height: 11.3rem !important;
+        width: 33rem !important;
     }
 
     .faixa3{
@@ -81,7 +83,7 @@
         flex-direction: column;
         align-items: center;
         height: 50vh;
-        justify-content: space-evenly   ;
+        justify-content: space-evenly;
         border-radius: 2rem;
         
     }
