--- a/src/pages/tabelaADM/index.scss
+++ b/src/pages/tabelaADM/index.scss
@@ -1,4 +1,4 @@
-.body{
+.bodyt{
     background-image: url('../../assets/images/login.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
@@ -7,23 +7,23 @@
 
     .faixa1{
 
-        display: flex;
-        flex-direction: row;
-        background-color: #010915;
-        height: 15vh;
-        color: #ffff;
-        justify-content: space-around;
-        align-items: center;
+        display: flex !important;
+        flex-direction: row !important;
+        background-color: #010915 !important;
+        height: 15vh !important;
+        color: #ffff !important;
+        justify-content: space-around !important;
+        align-items: center !important;
 
         
     }
     .faixa2{
-        height: 70vh;
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
+        height: 70vh !important;
+        width: 100vw !important;
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important;
+        justify-content: space-evenly !important;
         
     }
     .adm{
@@ -67,35 +67,35 @@
         }
         .faixa3{
             background-color: #010915;
-            height: 15vh;
+            height: 15vh !important;
             
         }
 
         
 
         .preto{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
-            width: 100vw;
-            height: 60vh;
-            background-color: #000000ae;
-            padding-bottom: 7.9em;
+            display: flex !important;
+            flex-direction: column !important;
+            justify-content: space-evenly !important;
+            align-items: center !important;
+            width: 100vw !important;
+            height: 60vh !important;
+            background-color: #000000ae !important;
+            padding-bottom: 6.1rem !important;
         }
         
         .logo{
             height: 7em;
             width: 7.5em;
-            align-self: flex-start;
+            align-self: flex-start !important;
             
         }
 
         .volt{
-            font-family: 'Grenze2';
-            font-size: 1.3em;
-            text-decoration: none;
-            color: #AEABAB;
+            font-family: 'Grenze2' !important;
+            font-size: 1.3em !important;
+            text-decoration: none !important;
+            color: #AEABAB !important;
         }
 
     }    
