Nova reserva html e css

--- a/site/src/pages/login/index.scss
+++ b/site/src/pages/login/index.scss
@@ -30,7 +30,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center ;
-        height: 80vh;
+        height: 90vh;
         background-color: #00000095;
     }
 
@@ -40,6 +40,7 @@
         flex-direction: column !important;
         color: #fff !important;
         justify-content: space-between !important;
+        align-items: center;
         height: 11.3rem !important;
         width: 33rem !important;
     }
