--- a/site/src/pages/home/index.scss
+++ b/site/src/pages/home/index.scss
@@ -414,8 +414,9 @@
         display: flex;
         flex-direction: row;
         width: 100vw;
+        height: 50vh;
         justify-content: space-evenly;
-        
+        align-items: center;
     }
     
     .co{
