--- a/site/src/pages/login/index.scss
+++ b/site/src/pages/login/index.scss
@@ -1,4 +1,6 @@
- 
+ *{
+    border: 1px green solid;
+ }
 
 .bodyl{
     background-image: url('../../assets/images/login.jpg');
@@ -23,6 +25,9 @@
 
     }
 
+    input{
+        font-family: 'gotreg';
+    }
 
 
     .back{
@@ -39,7 +44,7 @@
         display: flex !important;
         flex-direction: column !important;
         color: #fff !important;
-        justify-content: space-between !important;
+        justify-content: space-around !important;
         align-items: center;
         height: 11.3rem !important;
         width: 33rem !important;
@@ -63,9 +68,11 @@
 
     .email{
         color: #C6781E;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        font-family: 'grereg';
         margin-left: 1.5rem;
     }
+
 
     .espaço{
         height: 3rem;
@@ -73,7 +80,6 @@
         border-radius: 3rem;
         width: 26rem;
         background-color: #a4a4a4;
-        margin-bottom: 2rem;
         font-size: 1.5rem;
         padding-left: 0.5rem;
     }
@@ -84,14 +90,15 @@
         flex-direction: column;
         align-items: center;
         height: 50vh;
-        justify-content: space-evenly;
+        justify-content: space-around;
         border-radius: 2rem;
         
     }
     .senha{
         color: #C6781E;
         margin-left: 1.5rem;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        font-family: 'grereg';
     }
     .espaço2{
         height: 3rem;
@@ -101,6 +108,14 @@
         background-color: #a4a4a4;
         font-size: 1.5rem;
         padding-left: 0.5rem;
+    }
+
+    .bt{
+        width: 10rem;
+        height:3.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .botao{
@@ -118,10 +133,40 @@
         font-family: 'grereg';
     }
 
+    .botao:hover{
+        cursor: pointer;
+        background-color: #c47d2c;
+        width: 8.1rem;
+        height: 2.9rem;
+        font-size: 1.9rem;
+        
+    }
+
+    .botao:active{
+        cursor: pointer;
+        background-color: #cc720c;
+        width: 8.1rem;
+        height: 2.9rem;
+        font-size: 1.9rem;
+        
+    }
+
     .b{
         width: 8rem;
         height: 8rem;
         align-self: flex-start;
+    }
+
+    .invalido{
+        color: #a71907;
+        text-decoration: none;
+        width: 15rem;
+        height: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.3rem;
+        font-family: '';
     }
 
 }
