--- a/site/src/pages/novaReserva/index.scss
+++ b/site/src/pages/novaReserva/index.scss
@@ -1,5 +1,4 @@
 
-
 .bodyn{
 
     background-image: url('../../assets/images/Rectangle\ 908.jpg');
@@ -115,6 +114,8 @@
 
     @media(max-width: 1280px)
     {
+        width: 100vw;
+
         h4{
             color: #B47022;
             font-family: 'grelig';
@@ -142,7 +143,7 @@
             background-color: #010915;
             color: #AEABAB;
             width: 50vw;
-            height: 65vh;
+            height: 55vh;
             border: 0;
             border-radius: 1rem;
             justify-content: center;
@@ -150,7 +151,7 @@
         }
         
         div{
-            width: 31rem;
+            width: 35rem;
             height: 3.5rem;
         }
         
@@ -172,7 +173,7 @@
             padding-right: 0.5rem;
             font-size: 1rem;
             width: 98.5%;
-            height: 1.5rem;
+            height: 1.9rem;
         }
         
         a{
@@ -186,11 +187,14 @@
         .t{
             color: #AEABAB;
             font-size: 1.2rem;
-            font-family: 'grelig';
+            font-family: 'grereg';
             padding: 0;
             height: 2rem;
             display: flex;
             align-items: flex-end;
+            background-color: #00000000;
+            appearance: none;
+            border: none;
         }
        
         select{
@@ -200,7 +204,7 @@
             text-align: center;
             font-size: 1rem;
             width: 100%;
-            height: 1.5rem;
+            height: 1.9rem;
             appearance: none;
         }
     
@@ -211,6 +215,54 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            height: 4rem;
+            font-size: 2.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .can:hover{
+            width: 10.3rem;
+            height: 4.3rem;
+            font-size: 2.6rem;
+            background-color: #020c1d;
+        }
+
+        .c{
+            width: 12rem;
+            margin-bottom: 4rem;
+            height: 6rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .criar{
+            width: 8rem;
+            height: 3rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .t:hover{
+            font-size: 1.22rem;
+            color: #c7c4c4;
+            cursor: pointer;
+
+        }
+
+        .erro{
+            color: #a71907;
+            width: 15rem;
+            height: 4rem;
+            font-family: 'gotreg';
+            font-size: 1.3rem;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+
         }
     }
 
