lista reserva com problemas de exibição

--- a/site/src/pages/listaReserva/index.scss
+++ b/site/src/pages/listaReserva/index.scss
@@ -19,13 +19,13 @@ width: 100vw;
     justify-content: space-around;
     align-items: center;
     width: 20rem;
-    height: 4rem;
+    height: 6rem;
     margin-left: 4vw;
 }
 
 .img{
-    height:5.3rem;
-    width: 5.5rem;
+    height:7.8rem;
+    width: 8rem;
     display: flex;
     align-self: flex-start;
 }
@@ -33,7 +33,7 @@ width: 100vw;
 header{
     display: flex;
     flex-direction: row;
-    height: 4rem;
+    height: 6rem;
     background-color: #010915;
     align-items: center;
     justify-content: space-between;
@@ -45,33 +45,20 @@ header{
 
 .voltar{
     justify-self: flex-start;
+    text-decoration: none;
+    color: #AEABAB;
 }
 
 .nova{
     justify-self: flex-end;
     color: #AEABAB;
+    text-decoration: none;
     margin-right: 6vw;
 }
 
 
 
-p{
-    color: #AEABAB;
-    font-family: 'gremed';
-    font-size:  0.7rem;
-    margin-left: 0.7rem;
-}
 
-a{
-    text-decoration: none;
-    color: #AEABAB;
-}
-
-h4{
-    color: #FFF;
-    font-size: 1.6rem;
-    font-family: 'gotreg';
-}
 
 .principal{
     display: flex;
@@ -90,84 +77,7 @@ h4{
     height: 45vh;
 }
 
-.r{
-    margin: 1.2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 17rem;
-    width: 12rem;
-    border-radius: 1rem;
-    background-color: #010915;
-}
 
-.div2{
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
-    justify-content: center;
-    height: 50vh;
-
-}
-
-
-
-.a2{
-    font-size: 2rem;
-    width: 4rem;
-    text-align: center;
-    height: 2.5rem;
-    font-family: 'gotreg';
-    font-weight: 500;
-}
-
-input{
-    text-decoration: none;
-    border-radius: 1.2rem;
-    width:9rem;
-    font-family: 'gremed';
-    height: 1rem;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    font-size: 0.8rem;
-    background-color: #AEABAB;
-    border: 0;
-}
-
-.h{
-    border-radius: 1.2rem;
-    width:10rem;
-    font-family: 'gotreg' !important;
-    height: 1.3rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center ;
-    font-size: 0.7rem;
-    background-color: #AEABAB;
-}
-
-form{
-    color: #AEABAB;
-    
-}
-
-.form{
-    
-    width:10rem;
-}
-
-select{
-    width: 10rem;
-    border-radius: 1.2rem;
-    height: 1.2rem;
-    font-family: 'gotreg';
-    font-size: 0.8rem;
-    background-color: #AEABAB;
-    appearance: none;
-    text-align: center;
-}
 
 
 .j{
@@ -180,9 +90,57 @@ select{
     font-weight: 200;
 }
 
-li{
-    list-style: none;
+th{
+    text-align: center;
+    color: #FFF;
 }
+
+td{
+    text-align: center;
+    color: #010915;
+}
+
+table{
+    border-collapse: collapse;
+    width: 85vw;
+}
+
+tbody{
+    background-color: #AEABAB;
+    width: 90vw;
+    height: 2rem; 
+    text-align: center;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #737373;
+}
+
+.tabela{
+    width: 85vw;
+    height: 75vh;
+    background-color: #010915;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 2rem;
+
+}
+
+img{
+    width: 4rem;
+    height: 2rem;
+}
+
+
+
+
+
+
+
+
 
 
 
