--- a/site/src/pages/home/index.scss
+++ b/site/src/pages/home/index.scss
@@ -59,14 +59,12 @@
 *{
     margin: 0;
     padding: 0;
-  
+    border: 1px green solid;
 }
 
 .home{
 
     
-    
-
     .menu-54{
         background-color: #010915;
         height: 9vh;
@@ -739,7 +737,7 @@
     
     .menu-54{
         background-color: #010915;
-        height: 12vh;
+        height: 11vh;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -791,19 +789,20 @@
     }
     
     .faixa-1{
-        padding-top: 5em;
+        padding-top: 2em;
     }  
     
     .textos-1{
         background-image: url('../../assets/images/unidade.jpeg');
-        background-size: 100%;
-     
-        height: 71vh;
+        background-size: 101%;
+        background-position: 99% 99%;
+       
+        height: 45vmax;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         justify-content: center;
-        width: 100vw;
+        width: 100vmax;
     }
     
     .tex-1{
@@ -876,19 +875,19 @@
     
     .fo-1{
         width: 11rem;
-        height: 15rem;
+        height: 13rem;
         
         
     }
     
     .fo-2{
-        width: 11rem;
+        width: 10rem;
         height: 13rem;
     }
     
     .fo-3{
-        width: 13rem;
-        height: 14rem;
+        width: 12rem;
+        height: 13rem;
        
     
         
@@ -901,7 +900,7 @@
         font-family: 'f2'; 
         flex-direction: column;
         width: 35vw;
-        height: 50vh;
+        height: 40vh;
         align-items: center;
     }
     
@@ -916,9 +915,9 @@
         background-color:#111010fb ;
         flex-direction: row;
         display: flex;
-        width: 85vw;
+        width: 90vw;
         justify-content: space-evenly;
-        height: 70vh;
+        height: 60vh;
         align-items: center;
         border-radius: 1rem;
         margin: 0;
@@ -978,15 +977,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 60vh;
+        height: 55vh;
         justify-content: space-between;
         width: 40vw;
     }
     
     .fo-4{
-        width: 40vmax ;
-        height: 15vmax;
-        
+        width: 40vw;
+        height: 17vw;
+
     }
     
     .faixa-4{
