--- a/site/src/pages/reservaCliente/index.scss
+++ b/site/src/pages/reservaCliente/index.scss
@@ -1,3 +1,7 @@
+*{
+    border: green  1px solid;
+}
+
 .bodyr{
 
     header{
@@ -421,6 +425,21 @@
     }
     
     @media(max-width: 800px ){
+        .img{
+            background-image: url('../../assets/images/Home-1.png');
+            background-size: 155%;
+            background-position: 50% 50%;
+        }
+
+        .R1{
+            height: 105vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            justify-content: space-evenly;
+            background-color: #000000ae;
+        }
 
         .button1{
             border: 0;
@@ -472,13 +491,14 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
-            align-items: flex-start;
+            align-items: flex-end;
+            padding: 30px;
             
         }
 
         .logo-2{
-            width: 10rem;
-            height: 9rem;
+            width: 6rem;
+            height: 7rem;
             margin-left: 1rem;
         }
 
