Grandes ajustes de resolução, ddl e dml atualizados, leves ajustes na nova reserva ainda n funcional e lista reserva falta apenas os botões de remover e concluir

--- a/site/src/pages/novaReserva/index.scss
+++ b/site/src/pages/novaReserva/index.scss
@@ -89,6 +89,9 @@
         height: 2rem;
         display: flex;
         align-items: flex-end;
+        background-color: #00000000;
+        appearance: none;
+        border: none;
     }
    
     select{
@@ -109,6 +112,51 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    .can:hover{
+        width: 10.3rem;
+        height: 4.8rem;
+        font-size: 2.6rem;
+        background-color: #020c1d;
+    }
+
+    .c{
+        width: 12rem;
+        margin-bottom: 4rem;
+        height: 6rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .criar{
+        width: 8rem;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        appearance: none;
+
+    }
+
+    .t:hover{
+        font-size: 1.28rem;
+        color: #c7c4c4;
+        cursor: pointer;
+
+    }
+
+    .erro{
+        color: #a71907;
+        width: 15rem;
+        height: 4rem;
+        font-family: 'gotreg';
+        font-size: 1.3rem;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+
     }
 
 
@@ -244,6 +292,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            appearance: none;
         }
 
         .t:hover{
