--- a/site/src/pages/listaReserva/index.scss
+++ b/site/src/pages/listaReserva/index.scss
@@ -135,21 +135,35 @@ tbody tr:nth-child(even) {
 
 }
 
-img{
+.editar, .nao, .sim{
     width: 1rem;
-    height: 0.9rem;
+    height: 1rem;
+    border: 0;
+    box-sizing: border-box;
     
 }
+
+.editar:hover, .sim:hover, .nao:hover{
+    cursor: pointer;
+}    
 
 .imgs{
 
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
-
+button{
+    appearance: none;
+    border: 0;
+    padding: 0.2rem;
+    background-color: #01091500;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
 
 
 
