--- a/site/src/pages/login/index.scss
+++ b/site/src/pages/login/index.scss
@@ -33,6 +33,7 @@
         align-items: center;
         justify-content: center ;
         height: 90vh;
+        border: 0;
         background-color: #00000095;
     }
 
@@ -51,7 +52,7 @@
         display: flex;
         flex-direction: row;
         background-color: #010915;
-        height: 4rem;
+        height: 10vh !important;
     }
 
     .h1{
