--- a/site/src/pages/novaReserva/index.scss
+++ b/site/src/pages/novaReserva/index.scss
@@ -84,11 +84,13 @@
     .t{
         color: #AEABAB;
         font-size: 1.2rem;
-        font-family: 'grelig';
+        font-family: 'grereg';
         padding: 0;
         height: 2rem;
+        width: 10rem;
         display: flex;
-        align-items: flex-end;
+        align-items: center;
+        justify-content: center;
         background-color: #00000000;
         appearance: none;
         border: none;
@@ -131,13 +133,14 @@
     }
 
     .criar{
-        width: 8rem;
-        height: 3rem;
+        width: 10rem;
+        height: 4rem;
         display: flex;
         align-items: center;
         justify-content: center;
         appearance: none;
-
+        flex-direction: column-reverse;
+        
     }
 
     .t:hover{
@@ -150,9 +153,9 @@
     .erro{
         color: #a71907;
         width: 15rem;
-        height: 4rem;
+        height: 5rem;
         font-family: 'gotreg';
-        font-size: 1.3rem;
+        font-size: 1rem;
         display: flex;
         align-items: flex-end;
         justify-content: center;
@@ -238,8 +241,10 @@
             font-family: 'grereg';
             padding: 0;
             height: 2rem;
+            width: 10rem;
             display: flex;
-            align-items: flex-end;
+            align-items: center;
+            justify-content: center;
             background-color: #00000000;
             appearance: none;
             border: none;
@@ -287,12 +292,14 @@
         }
 
         .criar{
-            width: 8rem;
-            height: 3rem;
+            width: 10rem;
+            height: 5rem;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
             appearance: none;
+            flex-direction: column-reverse;
+            
         }
 
         .t:hover{
@@ -304,8 +311,8 @@
 
         .erro{
             color: #a71907;
-            width: 15rem;
-            height: 4rem;
+            width: 22rem;
+            height: 3rem;
             font-family: 'gotreg';
             font-size: 1.3rem;
             display: flex;
