--- a/site/src/pages/reservaCliente/index.scss
+++ b/site/src/pages/reservaCliente/index.scss
@@ -12,8 +12,8 @@
     }
 
     .logo{
-        width: 9vw;
-        height: 17vh;
+        width: 11.5rem;
+        height: 11rem;
         align-self: flex-start;
     }
 
@@ -28,7 +28,8 @@
 
     .img{
         background-image: url('../../assets/images/Home-1.png');
-        background-size: 100%;
+        background-size: 140%;
+        background-position: 50% 50%;
     }
 
     .R1{
@@ -76,14 +77,16 @@
     }
 
     .d{
-        width: 22vw;
+        width: 15rem;
+        height: 2rem;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
+        border: 1px green solid;
     }
 
     .input1{
-        width: 10vw;
+        width: 15rem;
         border: 0;
         border-radius: 0.3rem;
         text-align: center;
@@ -93,7 +96,17 @@
         font-size: 1rem;
     }
 
-
+    .input3{
+        width: 4rem;
+        height: 3rem;
+        border: 0;
+        border-radius: 0.3rem;
+        text-align: center;
+        color: #010915;
+        background-color: #AEABAB;
+        font-family: 'her';
+        font-size: 1.5rem;
+    }
 
 
     .t{
@@ -106,31 +119,7 @@
         margin-bottom: 2rem;
     }
 
-    .button1{
-        border: 0;
-        width: 2vw;
-        height: 4vh;
-        border-radius: 0.2rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #AEABAB;
-        color: #010915;
-        font-size: 1.5rem;
-    }
-
-    .button1:hover{
-        border: 0;
-        width: 2.1vw;
-        height: 4.1vh;
-        border-radius: 0.2rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #AEABAB;
-        color: #010915;
-        font-size: 1.5rem;
-    }
+    
 
     .p1{
         color: #B47022;
@@ -141,33 +130,7 @@
 
     }
 
-    .button{
-        width: 2vw;
-        border: 0;
-        height: 4vh;
-        border-radius: 0.2rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #AEABAB;
-        color: #010915;
-        font-size: 1.5rem;
-        padding-bottom: 0.2rem;    
-    }
-
-    .button:hover{
-        width: 2.1vw;
-        border: 0;
-        height: 4.1vh;
-        border-radius: 0.2rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #AEABAB;
-        color: #010915;
-        font-size: 1.5rem;
-        padding-bottom: 0.2rem;    
-    }
+    
 
 
     .r2{
@@ -225,9 +188,19 @@
         font-family: 'her';
         align-self: flex-end;
         margin-right: 3vw;
+        border: none;
+        appearance: none;
+        background-color:rgba(255, 255, 255, 0);
+        font-size: 1rem;
+        width: 10rem;
+        height: 2rem;
     }
 
-
+    .y:hover{
+        cursor:pointer;
+        font-size: 1.05rem;
+        
+    }
 
 
 
