--- a/site/src/pages/novaReserva/index.scss
+++ b/site/src/pages/novaReserva/index.scss
@@ -47,7 +47,7 @@
         gap: 0.3rem;
     }
     
-    div{
+    .preto div{
         width: 31rem;
         height: 3.5rem;
     }
@@ -201,7 +201,7 @@
             gap: 0.3rem;
         }
         
-        div{
+        .preto div{
             width: 35rem;
             height: 3.5rem;
         }
